--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
 
                         <button type="submit" class="btn btn-primary btn-large">
                             <span class="btn-text">Envoyer la demande</span>
-                            <span class="btn-loading">Envoi en cours...</span>
+                            <!-- <span class="btn-loading">Envoi en cours...</span> -->
                         </button>
 
                         <div class="form-note">
@@ -247,7 +247,7 @@
                 <div class="footer-contact">
                     <h4>Contact</h4>
                     <p>📞 <a href="tel:+33123456789">01 23 45 67 89</a></p>
-                    <p>✉️ <a href="mailto:contact@drzclean.fr">contact@drzclean.fr</a></p>
+                    <p>✉️ <a href="mailto:dannikk056@gmail.com">dannikk056@gmail.com</a></p>
                     <div class="social-links">
                         <a href="#" class="social-link">📘</a>
                         <a href="#" class="social-link">📷</a>
