--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
 
                         <button type="submit" class="btn btn-primary btn-large">
                             <span class="btn-text">Envoyer la demande</span>
-                            <!-- <span class="btn-loading">Envoi en cours...</span> -->
+                            <span class="btn-loading">Envoi en cours...</span>
                         </button>
 
                         <div class="form-note">
