--- a/contact.html
+++ b/contact.html
@@ -199,6 +199,11 @@
                         </div>
                     </form>
 
+                    <div id="customSuccessMessage" class="form-success-message" style="display: none;">
+    <h3>Merci pour votre demande !</h3>
+    <p>Nous vous répondrons dans les plus brefs délais.</p>
+</div>
+
                     <!-- Success Message -->
                     <div id="successMessage" class="success-message">
                         <div class="success-content">
