--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                 <!-- Contact Form -->
                 <div class="contact-form-container">
                     <h2>Demande de <span class="accent">devis</span></h2>
-                    <form action="https://formspree.io/f/movwlgqk" method="POST" class="contact-form" id="contactForm">
+                    <form action="https://formspree.io/f/movwlgqk?success=1" method="POST" class="contact-form" id="contactForm">
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="nom">Nom *</label>
