--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,13 @@
                 <!-- Contact Form -->
                 <div class="contact-form-container">
                     <h2>Demande de <span class="accent">devis</span></h2>
-                    <form action="https://formspree.io/f/movwlgqk?success=1" method="POST" class="contact-form" id="contactForm">
+
+                        <form action="https://formspree.io/f/movwlgqk" method="POST" class="contact-form" id="contactForm">
+  <input type="hidden" name="_redirect" value="https://kekepa93.github.io/drz-clean/contact.html?success=1">
+
+
+
+                    
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="nom">Nom *</label>
