--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,8 @@
                 
 
                     <!-- Success Message -->
-                    <div id="successMessage" class="success-message">
+                    <div id="successMessage" class="success-message" style="display: none;">
+
                         <div class="success-content">
                             <div class="success-icon">✅</div>
                             <h3>Message envoyé !</h3>
