--- a/contact.html
+++ b/contact.html
@@ -492,7 +492,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>Drz<span class="accent">Clean</span></h2>
+                <h2>DRZ<span class="accent">CLEAN</span></h2>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Accueil</a></li>
