--- a/faq.html
+++ b/faq.html
@@ -15,6 +15,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
+    <a href="index.html" class="logo-link">
                 <h2>DRZ<span class="accent">CLEAN</span></h2>
             </div>
             <ul class="nav-menu">
@@ -252,9 +253,22 @@
                     <p>📞 <a href="tel:+33123456789">01 23 45 67 89</a></p>
                     <p>✉️ <a href="mailto:contact@drzclean.fr">contact@drzclean.fr</a></p>
                     <div class="social-links">
-                        <a href="#" class="social-link">📘</a>
-                        <a href="#" class="social-link">📷</a>
-                    </div>
+  <!-- Instagram -->
+  <a href="https://instagram.com/votrecommpte" 
+     class="social-link instagram" 
+     target="_blank"
+     aria-label="Visiter notre Instagram">
+    <img src="https://www.svgrepo.com/show/452229/instagram-1.svg" alt="Instagram" width="24" height="24">
+  </a>
+  
+  <!-- Facebook -->
+  <a href="https://facebook.com/votrepage" 
+     class="social-link facebook" 
+     target="_blank"
+     aria-label="Visiter notre Facebook">
+    <img src="https://www.svgrepo.com/show/475647/facebook-color.svg" alt="Facebook" width="24" height="24">
+  </a>
+</div>
                 </div>
             </div>
             <div class="footer-bottom">
